fix(core): stop ConfigFileGrouper silently dropping properties from multiple base files
- ConfigFileGrouper.mergeGroup() now folds documents that resolve to the
  same label (base, or the same named profile) coming from multiple
  physical files via ProfileMerger.mergeProperties(), instead of keeping
  only the first one found. Previously, application.yml + application.properties
  coexisting as base files silently lost all of one file's properties,
  since ProfileMerger.findBaseProperties() only ever looked at the first
  base document — a real bug surfaced by the /actuator/env benchmark below,
  not a design decision.
- Fold order is ascending precedence (new precedenceRank()): .properties
  wins a key conflict over .yml/.yaml, confirmed against a real Spring
  Boot 4.1.1 app; .yml vs .yaml between themselves is an arbitrary but
  deterministic tie-break.
- Same fix also covers two files naming the same profile (e.g.
  application-prod.yml + application-prod.properties), which previously
  produced a duplicate, redundant EffectiveConfig for that profile.
  Case 3 (precedence between a profile-named file and an internal
  on-profile block) is deliberately left out of this fix.
- Add 4 ConfigFileGrouperTest cases covering the fold for both the
  base-file and named-profile scenarios (disjoint keys survive from both
  files; .properties wins a key conflict).
- Fix a bug in the external ActuatorEnvComparisonTest benchmark, found
  while re-validating: it compared SCG's raw stored placeholder value
  against Spring's already-resolved one, since EffectiveConfig keeps
  ${VAR:default} unresolved until a Rule calls
  EnvironmentPlaceholder.resolve() — now resolves the SCG side before
  comparing.
- Document the benchmark's method and result in VALIDATION.md: ProfileMerger
  now matches a real Spring Boot 4.1.1 app across all 5 covered behaviors,
  including the placeholder case.